Added BNB management bill 2024 Added new policies for Goober and Dingle Added countdown to election

--- a/goober.html
+++ b/goober.html
@@ -35,6 +35,9 @@
                         <li>Gender-pay gap eradicated</li>
                         <li>Lower cost of living</li>
                         <li>Power and Water bills decreased</li>
+                        <li>Elimination of the Jews (but only if they are bad)</li>
+                        <li>Better relations with Poland</li>
+                        <li>Blow up the old Banks</li>
                     </ul> 
                 </div>
             </th>
