fixed extra point in dingle policies Added new blurg in main index

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </table>
 
         <h1>September 2024 Election</h1>
+        <h2>25/08/24</h2>
         <p style="margin: 7px;">The September 2024 election will be known as the very first election in the history of Bozolandia. Previously, before this election President Isaiah Edgecombe was assumed
             as president whilst the country was still forming, But now he has decided to initiate an election. When the election was announced Vice president Joshua Maris ran for the Goober party,
             whilst Carlos Peihopa ran for the Dingle party. Later, Joshua Maris made the decision to step down as President Elect, and so, William Collins was Elected as Goober party elect. He put 
@@ -60,6 +61,11 @@
             a mandatory half day, and Woman must make a sandwich everyday. Due to these contraversial political ideoligies, The Goober party made the decision to annouce they would inact a full invasion 
             of Isreal and erradiacate the Jewish population. Now the Bozolandians are faced on who to choose, A man promoting woman being forced to make sandwiches, or a man planning to erradicate 
             the jewish population.
+        </p>
+        <h2>02/09/24</h2>
+        <p style="margin: 7px;">The recent debate will be historic as there was live fotage of President elect Collins shooting himself, the debate had both cadidates battling verbaly trying to gain the
+            upper hand on one and other. During this deabte we see how whilst Chitty is verbily attacking Collins, Collins is planning his moves carfully and ensuring he makes a good decision on his words
+            At this debate we saw both elects present very good policies, but are they good enought to sway the public? We will see.
         </p>
     </div>
     <script src="js/main.js"></script>
