Added 2 new bills Updated candidates Policies

--- a/dingle.html
+++ b/dingle.html
@@ -27,27 +27,27 @@
             <th>
                 <div style="text-align: left;">
                     <ul>
-                        <li>Monday is a part of the weekend</li>
-                        <li>Friday becomes a half day</li>
-                        <li>Increase the size of the borders</li>
+                        <!-- <li>Monday is a part of the weekend</li> -->
+                        <!-- <li>Friday becomes a half day</li> -->
+                        <!-- <li>Increase the size of the borders</li> -->
                         <li>Operation Fluid-Africa. More water and freedom to Africa</li>
-                        <li>Eliminate sweatshops across the globe</li>
-                        <li>Donations to Asia increased</li>
-                        <li>Any persons not identifying as a man or woman will be executed</li>
-                        <li>Wolverine will be cloned and used as a super soldier</li>
-                        <li>Lowered taxes for all</li>
+                        <!-- <li>Eliminate sweatshops across the globe</li> -->
+                        <!-- <li>Donations to Asia increased</li> -->
+                        <!-- <li>Any persons not identifying as a man or woman will be executed</li> -->
+                        <!-- <li>Wolverine will be cloned and used as a super soldier</li> -->
+                        <!-- <li>Lowered taxes for all</li> -->
                         <li>Lowered bills</li>
-                        <li>Overhaled Tanks and artillery</li>
-                        <li>Higher military spending</li>
+                        <!-- <li>Overhaled Tanks and artillery</li> -->
+                        <!-- <li>Higher military spending</li> -->
                         <li>Free ice cream Fridays on random Fridays (limit of 3)</li>
-                        <li>Free Pepsi Wednesday on random Wednesdays (limit of 4)</li>
+                        <li>Free Pepsi Wednesday on random Wednesdays (limit of 4, and only if you want to)</li>
                         <li>Team Trees, Plant a tree for every dollar donated</li>
-                        <li>20% off taxes for citizens</li>
+                        <li>10% off taxes for citizens</li>
                         <li>Equal gender rights</li>
                         <li>Families receive a 10% tax relief</li>
                         <li>Vaping is only allowed for people 19+, if you are younger you will be fined $25 USD. If a Parental guardian is allowing you to vape, they will be fined $50 USD</li>
                         <li>Medical bills and electic bills for Parental guardians of people under the age of 7 years old will be deducted by 10%</li>
-                        <li>Truency officers will be dispacthed if a student has under 70% attendance.</li>
+                        <!-- <li>Truency officers will be dispacthed if a student has under 70% attendance.</li> -->
                     </ul> 
                 </div>
             </th>
