--- a/goober.html
+++ b/goober.html
@@ -29,15 +29,14 @@
                     <ul>
                         <li>Lowered tax for citizens</li>
                         <li>Higher tax for corporations</li>
-                        <li>Taco Tuesday is a public holiday every Tuesday</li>
-                        <li>Military spending increased</li>
+                        <li>Taco Tuesday is a public holiday every Tuesday (3 taco limit)</li>
+                        <li>Military spending increased (Until goblin research is conducted, at which point the budget will be reduced)</li>
                         <li>Power grid re-done to be greener</li>
                         <li>Gender-pay gap eradicated</li>
                         <li>Lower cost of living</li>
-                        <li>Power and Water bills decreased</li>
-                        <li>Elimination of the Jews (but only if they are bad)</li>
+                        <li>Power and Water bills decreased (by 10%)</li>
                         <li>Better relations with Poland</li>
-                        <li>Blow up the old Banks</li>
+                        <li>Banks will be renovated</li>
                     </ul> 
                 </div>
             </th>
