--- a/index.html
+++ b/index.html
@@ -10,28 +10,13 @@
 <body>
     <header>
         <h1>Bozolandia Official Government Directory</h1>
-        <h3>Current serving president: Isaiah Edgecombe</h3>
+        <h3>Current serving president: William Collins</h3>
     </header>
     <nav>
         <ul>
           <button onclick="selectPage('billDirectory')">Bill directory</button>
         </ul>
     </nav>
-
-    <table style="width:100%">
-        <tr>
-            <th>
-                <div id="month-container">
-                    <a href="dingle.html"><img src="images/Harrison sep 2024.png" alt="Harrison Chitty running for September 2024"></a>
-                </div>
-            </th>
-            <th>
-                <div id="month-container">
-                    <a href="goober.html"><img src="images/William sep 2024.png" alt="William Collins running for September 2024"></a>
-                </div>
-            </th>
-          </tr>
-    </table>
 
     <div class="center">
         <img src="images/September 2024 candidates.png" alt="All Sep 2024 candidates" style="width:90%">
@@ -40,33 +25,27 @@
             <tr>
                 <th>
                     <div class="center">
-                        <img src="images/Carlos sep 2024.png" alt="Carlos Peihopa running for September 2024">
+                        <img src="images/William sep 2024.png" alt="William Collins running for September 2024">
                     </div>
                 </th>
                 <th>
-                    <div class="center">
-                        <img src="images/joshua sep 2024.png" alt="Joshua Maris running for September 2024">
+                    <div style="text-align: left;">
+                        <ul>
+                            <li>Lowered tax for citizens</li>
+                            <li>Higher tax for corporations</li>
+                            <li>Taco Tuesday is a public holiday every Tuesday (3 taco limit)</li>
+                            <li>Military spending increased (Until goblin research is conducted, at which point the budget will be reduced)</li>
+                            <li>Power grid re-done to be greener</li>
+                            <li>Gender-pay gap eradicated</li>
+                            <li>Lower cost of living</li>
+                            <li>Power and Water bills decreased (by 10%)</li>
+                            <li>Better relations with Poland</li>
+                            <li>Banks will be renovated</li>
+                        </ul> 
                     </div>
                 </th>
               </tr>
         </table>
-
-        <h1>September 2024 Election</h1>
-        <h2>25/08/24</h2>
-        <p style="margin: 7px;">The September 2024 election will be known as the very first election in the history of Bozolandia. Previously, before this election President Isaiah Edgecombe was assumed
-            as president whilst the country was still forming, But now he has decided to initiate an election. When the election was announced Vice president Joshua Maris ran for the Goober party,
-            whilst Carlos Peihopa ran for the Dingle party. Later, Joshua Maris made the decision to step down as President Elect, and so, William Collins was Elected as Goober party elect. He put 
-            forward many ground breaking policies such as Free Pepsi, Lowered citizen tax, and taco tuesday as a public holiday. These policies caused Carlos Peihopa to make the difficult decision to 
-            step down as President Elect. After this Harrison Chitty was elected as Dingle party elect. He pushed contraversial, but nescissary policies such as making Monday join the weekend, Fridays 
-            a mandatory half day, and Woman must make a sandwich everyday. Due to these contraversial political ideoligies, The Goober party made the decision to annouce they would inact a full invasion 
-            of Isreal and erradiacate the Jewish population. Now the Bozolandians are faced on who to choose, A man promoting woman being forced to make sandwiches, or a man planning to erradicate 
-            the jewish population.
-        </p>
-        <h2>02/09/24</h2>
-        <p style="margin: 7px;">The recent debate will be historic as there was live fotage of President elect Collins shooting himself, the debate had both cadidates battling verbaly trying to gain the
-            upper hand on one and other. During this deabte we see how whilst Chitty is verbily attacking Collins, Collins is planning his moves carfully and ensuring he makes a good decision on his words
-            At this debate we saw both elects present very good policies, but are they good enought to sway the public? We will see.
-        </p>
     </div>
     <script src="js/main.js"></script>
 </body>
