Added the pages for Carlos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Bozolandia Official Government Directory</h1>
-        <h3>Current serving president: William Collins</h3>
+        <h3>Current serving president: Carlos Peihopa</h3>
     </header>
     <nav>
         <ul>
@@ -19,13 +19,13 @@
     </nav>
 
     <div class="center">
-        <img src="images/September 2024 candidates.png" alt="All Sep 2024 candidates" style="width:90%">
+        <img src="images/October P VP CFs.jpg" alt="October President and vice president, with their chief of staffs" style="width:90%">
 
         <table style="width:100%">
             <tr>
                 <th>
                     <div class="center">
-                        <img src="images/William sep 2024.png" alt="William Collins running for September 2024">
+                        <img src="images/Carlos OCT 2024.png" alt="Carlos Peihopa">
                     </div>
                 </th>
                 <th>
@@ -34,18 +34,28 @@
                             <li>Lowered tax for citizens</li>
                             <li>Higher tax for corporations</li>
                             <li>Taco Tuesday is a public holiday every Tuesday (3 taco limit)</li>
-                            <li>Military spending increased (Until goblin research is conducted, at which point the budget will be reduced)</li>
-                            <li>Power grid re-done to be greener</li>
                             <li>Gender-pay gap eradicated</li>
                             <li>Lower cost of living</li>
                             <li>Power and Water bills decreased (by 10%)</li>
-                            <li>Better relations with Poland</li>
-                            <li>Banks will be renovated</li>
+                            <li>Protect the florps</li>
+                            <li>Examine Bozoplanitia</li>
                         </ul> 
                     </div>
                 </th>
               </tr>
         </table>
+    </div>
+    <div>
+        <h2 class="header">All bozolandia Presidents</h2>
+        <div id="month-container">
+            <img src="years/2024/months/august.png" alt="August, Isaiah Edgecombe">
+        </div>
+        <div id="month-container">
+            <img src="years/2024/months/september.png" alt="September, William Collins">
+        </div>
+        <div id="month-container">
+            <img src="years/2024/months/october.png" alt="October, Carlos Peihopa">
+        </div>
     </div>
     <script src="js/main.js"></script>
 </body>
