re skined website, and added october candidates

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>Bozolandia Official Government Directory</h1>
+        <div>
+            <img src="images/BozolandiaSymbol.png" alt="Bozolandia Logo" class="HeaderIcon">
+            <h1>Bozolandia Official Government Directory</h1>
+        </div>
         <h3>Current serving president: Carlos Peihopa</h3>
     </header>
     <nav>
@@ -19,7 +22,37 @@
     </nav>
 
     <div class="center">
+
+        <table style="width:100%">
+            <tr>
+                <th>
+                    <div class="center">
+                        <img src="images/Goober button NOV 2024.png" alt="Carlos Peihopa">
+                    </div>
+                </th>
+                <th>
+                    <div class="center">
+                        <img src="images/Dingle button NOV 2024.png" alt="Carlos Peihopa">
+                    </div>
+                </th>
+              </tr>
+              <tr>
+                <th>
+                    <div class="center">
+                        <i>Policies will be uploaded before 01/11/24</i>
+                    </div>
+                </th>
+                <th>
+                    <div class="center">
+                        <i>Policies will be uploaded before 01/11/24</i>
+                    </div>
+                </th>
+              </tr>
+        </table>
+
         <img src="images/October P VP CFs.jpg" alt="October President and vice president, with their chief of staffs" style="width:90%">
+
+        
 
         <table style="width:100%">
             <tr>
