Added new candidates, policies, and bills

--- a/index.html
+++ b/index.html
@@ -27,24 +27,36 @@
             <tr>
                 <th>
                     <div class="center">
-                        <img src="images/Goober button NOV 2024.png" alt="Carlos Peihopa">
+                        <img src="images/Marais Molineux NOV 2024.png" alt="Joshua Marais, and Kieran Molineux">
                     </div>
                 </th>
                 <th>
                     <div class="center">
-                        <img src="images/Dingle button NOV 2024.png" alt="Carlos Peihopa">
+                        <img src="images/Dingle button NOV 2024.png" alt="Carlos Peihopa, and Harrison Chitty">
                     </div>
                 </th>
               </tr>
               <tr>
                 <th>
                     <div class="center">
-                        <i>Policies will be uploaded before 01/11/24</i>
+                        <i>GOOBER PARTY POLICIES</i>
+                    </div>
+                    <div>
+                            <p>Stop Racism</p>
+                            <p>Dont kill terrorists</p>
+                            <p>Protect the florps</p>
+                            <p>Examine Bozoplanitia</p>
+                            <p>Impliment Gooberism</p>
                     </div>
                 </th>
                 <th>
                     <div class="center">
-                        <i>Policies will be uploaded before 01/11/24</i>
+                        <i>DINGLE PARTY POLICIES</i>
+                    </div>
+                    <div>
+                            <p>Protect the florps</p>
+                            <p>Examine Bozoplanitia</p>
+                            <p>Impliment Ginglism</p>
                     </div>
                 </th>
               </tr>
