Added new Information For President Marais

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="images/BozolandiaSymbol.png" alt="Bozolandia Logo" class="HeaderIcon">
             <h1>Bozolandia Official Government Directory</h1>
         </div>
-        <h3>Current serving president: Carlos Peihopa</h3>
+        <h3>Current serving president: Joshua Marais</h3>
     </header>
     <nav>
         <ul>
@@ -23,46 +23,47 @@
 
     <div class="center">
 
-        <table style="width:100%">
-            <tr>
-                <th>
-                    <div class="center">
-                        <img src="images/Marais Molineux NOV 2024.png" alt="Joshua Marais, and Kieran Molineux">
-                    </div>
-                </th>
-                <th>
-                    <div class="center">
-                        <img src="images/Dingle button NOV 2024.png" alt="Carlos Peihopa, and Harrison Chitty">
-                    </div>
-                </th>
-              </tr>
-              <tr>
-                <th>
-                    <div class="center">
-                        <i>GOOBER PARTY POLICIES</i>
-                    </div>
-                    <div>
-                            <p>Stop Racism</p>
-                            <p>Dont kill terrorists</p>
-                            <p>Protect the florps</p>
-                            <p>Examine Bozoplanitia</p>
-                            <p>Impliment Gooberism</p>
-                    </div>
-                </th>
-                <th>
-                    <div class="center">
-                        <i>DINGLE PARTY POLICIES</i>
-                    </div>
-                    <div>
-                            <p>Protect the florps</p>
-                            <p>Examine Bozoplanitia</p>
-                            <p>Impliment Ginglism</p>
-                    </div>
-                </th>
-              </tr>
-        </table>
+<!--        <table style="width:100%">-->
+<!--            <tr>-->
+<!--                <th>-->
+<!--                    <div class="center">-->
+<!--                        <img src="images/Marais Molineux NOV 2024.png" alt="Joshua Marais, and Kieran Molineux">-->
+<!--                    </div>-->
+<!--                </th>-->
+<!--                <th>-->
+<!--                    <div class="center">-->
+<!--                        <img src="images/Dingle button NOV 2024.png" alt="Carlos Peihopa, and Harrison Chitty">-->
+<!--                    </div>-->
+<!--                </th>-->
+<!--              </tr>-->
+<!--              <tr>-->
+<!--                <th>-->
+<!--                    <div class="center">-->
+<!--                        <i>GOOBER PARTY POLICIES</i>-->
+<!--                    </div>-->
+<!--                    <div>-->
+<!--                            <p>Stop Racism</p>-->
+<!--                            <p>Dont kill terrorists</p>-->
+<!--                            <p>Protect the florps</p>-->
+<!--                            <p>Examine Bozoplanitia</p>-->
+<!--                            <p>Impliment Gooberism</p>-->
+<!--                    </div>-->
+<!--                </th>-->
+<!--                <th>-->
+<!--                    <div class="center">-->
+<!--                        <i>DINGLE PARTY POLICIES</i>-->
+<!--                    </div>-->
+<!--                    <div>-->
+<!--                            <p>Protect the florps</p>-->
+<!--                            <p>Examine Bozoplanitia</p>-->
+<!--                            <p>Impliment Ginglism</p>-->
+<!--                            <p>Comence Operation Stardust</p>-->
+<!--                    </div>-->
+<!--                </th>-->
+<!--              </tr>-->
+<!--        </table>-->
 
-        <img src="images/October P VP CFs.jpg" alt="October President and vice president, with their chief of staffs" style="width:90%">
+        <img src="images/November%20P%20VP%20COS.jpg" alt="Molineux, Edgecombe, Marias, and Peihopa" style="width:90%">
 
         
 
@@ -70,20 +71,17 @@
             <tr>
                 <th>
                     <div class="center">
-                        <img src="images/Carlos OCT 2024.png" alt="Carlos Peihopa">
+                        <img src="images/Marais%20Molineux%20NOV%202024.png" alt="Marias, and Molineux">
                     </div>
                 </th>
                 <th>
                     <div style="text-align: left;">
                         <ul>
-                            <li>Lowered tax for citizens</li>
-                            <li>Higher tax for corporations</li>
-                            <li>Taco Tuesday is a public holiday every Tuesday (3 taco limit)</li>
-                            <li>Gender-pay gap eradicated</li>
-                            <li>Lower cost of living</li>
-                            <li>Power and Water bills decreased (by 10%)</li>
+                            <li>Stop Racism</li>
+                            <li>Dont kill terrorists</li>
                             <li>Protect the florps</li>
                             <li>Examine Bozoplanitia</li>
+                            <li>Impliment Gooberism</li>
                         </ul> 
                     </div>
                 </th>
@@ -100,6 +98,9 @@
         </div>
         <div id="month-container">
             <img src="years/2024/months/october.png" alt="October, Carlos Peihopa">
+        </div>
+        <div id="month-container">
+            <img src="years/2024/months/november.png" alt="November, Joshua Marias">
         </div>
     </div>
     <script src="js/main.js"></script>
