GOD JUST SHIP IT IM SO DAMN TIRED

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
             <img src="images/BozolandiaSymbol.png" alt="Bozolandia Logo" class="HeaderIcon">
             <h1>Bozolandia Official Government Directory</h1>
         </div>
-        <h3>Current serving president: Joshua Marais</h3>
+        <h3>Current serving dictators: Isaiah Edgecombe, Joshua Marias</h3>
     </header>
     <nav>
         <ul>
-          <button onclick="selectPage('billDirectory')">Bill directory</button>
+            <button onclick="selectPage('billDirectory')">Bill directory</button>
+            <button onclick="selectPage('brainrot')">Bozolandia Brainrot Directory</button>
         </ul>
     </nav>
 
@@ -102,6 +103,7 @@
         <div id="month-container">
             <img src="years/2024/months/november.png" alt="November, Joshua Marias">
         </div>
+        <p>Lets cut the shit its a dictatorship.</p>
     </div>
     <script src="js/main.js"></script>
 </body>
