--- a/brainrot.html
+++ b/brainrot.html
@@ -46,7 +46,18 @@
         <p>Sussy</p>
         <p>Baka</p>
         <p>Among + Us</p>
-        <p>Big + Daddy + Energy</p>
+        <p>Aura</p>
+        <p>67</p>
+        <p>ts + pmo</p>
+        <p>4</p>
+        <p>mustard</p>
+        <p>labubu</p>
+        <p>goon</p>
+        <p>I + Guess + Thats + Just + How + The + Story + Goes</p>
+        <p>Thick + of + it</p>
+        <p>Hawk + Tuah</p>
+        <p>Prime</p>
+        <p>I've + Played + These + Games + Before</p>
     </div>
 </body>
 </html>
